force-app/main/default/objects/Daily_Ledger__c/Daily_Ledger__c.object-meta.xml
<CustomObject>
    <label>Daily Ledger</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Daily Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>