force-app/main/default/objects/Daily_Ledger__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Daily Ledgers (Destination Location)</relationshipLabel>
    <relationshipName>Daily_Ledgers1</relationshipName>
    <type>Lookup</type>
</CustomField>