force-app/main/default/objects/Daily_Ledger__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Daily Ledgers</relationshipLabel>
    <relationshipName>Daily_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>