force-app/main/default/objects/Daily_Ledger__c/fields/Product_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Inventory</label>
    <referenceTo>ProductItem</referenceTo>
    <relationshipLabel>Daily Ledgers</relationshipLabel>
    <relationshipName>Daily_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>