force-app/main/default/objects/Daily_Ledger__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Daily Ledgers</relationshipLabel>
    <relationshipName>Daily_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>