force-app/main/default/objects/Daily_Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Destination_Location__c</columns>
    <columns>Source_Location__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Inventory__c</columns>
    <columns>Transfer_Quantity__c</columns>
    <columns>Intake_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Daily Ledgers</label>
</ListView>