force-app/main/default/objects/Daily_Ledger__c/listViews/Today_s.listView-meta.xml
<ListView>
    <fullName>Today_s</fullName>
    <columns>NAME</columns>
    <columns>Destination_Location__c</columns>
    <columns>Source_Location__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Inventory__c</columns>
    <columns>Transfer_Quantity__c</columns>
    <columns>Intake_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Daily Ledgers</label>
</ListView>